--- a/TVProject/app/src/main/res/layout/activity_main1.xml
+++ b/TVProject/app/src/main/res/layout/activity_main1.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
@@ -23,6 +24,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center">
+
+                <net.bjyfkj.caa.model.opendanmaku.DanmakuView
+                    android:id="@+id/danmakuView"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    app:end_Y_offset="0.8"
+                    app:max_row="4"
+                    app:max_running_per_row="2"
+                    app:pick_interval="1000"
+                    app:show_debug="false"
+                    app:start_Y_offset="0.2" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -55,6 +67,7 @@
                     android:text="本视频由&quot;樊文花面膜天虹百货商场店&quot;特约播出 (本商场二层西侧)"
                     android:textColor="@android:color/holo_red_dark"
                     android:textSize="28dp" />
+
             </RelativeLayout>
 
 
@@ -179,7 +192,7 @@
                     android:layout_above="@+id/textView5"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:src="@drawable/masks" />
+                    android:src="@drawable/beer" />
 
                 <TextView
                     android:id="@+id/textView5"
@@ -190,9 +203,10 @@
                     android:layout_alignParentStart="true"
                     android:layout_gravity="bottom"
                     android:gravity="center"
-                    android:text="扫码送口罩"
+                    android:text="扫码送啤酒"
                     android:textColor="@android:color/holo_red_dark"
-                    android:textSize="25dp" />
+                    android:textSize="25dp"
+                    android:paddingBottom="10dp" />
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
