--- a/TVProject/app/src/main/res/layout/activity_main1.xml
+++ b/TVProject/app/src/main/res/layout/activity_main1.xml
@@ -25,17 +25,6 @@
                 android:layout_height="match_parent"
                 android:gravity="center">
 
-                <net.bjyfkj.caa.model.opendanmaku.DanmakuView
-                    android:id="@+id/danmakuView"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    app:end_Y_offset="0.8"
-                    app:max_row="4"
-                    app:max_running_per_row="2"
-                    app:pick_interval="1000"
-                    app:show_debug="false"
-                    app:start_Y_offset="0.2" />
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -67,6 +56,17 @@
                     android:text="本视频由&quot;樊文花面膜天虹百货商场店&quot;特约播出 (本商场二层西侧)"
                     android:textColor="@android:color/holo_red_dark"
                     android:textSize="28dp" />
+
+                <net.bjyfkj.caa.model.opendanmaku.DanmakuView
+                    android:id="@+id/danmakuView"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    app:end_Y_offset="0.8"
+                    app:max_row="4"
+                    app:max_running_per_row="2"
+                    app:pick_interval="1000"
+                    app:show_debug="false"
+                    app:start_Y_offset="0.2"/>
 
             </RelativeLayout>
 
@@ -113,13 +113,14 @@
             <!--android:textColor="@android:color/holo_red_dark"-->
             <!--android:textSize="50dp" />-->
             <TextView
-                android:id="@+id/shop_address"
+                android:id="@+id/content"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
                 android:textColor="@android:color/holo_red_dark"
-                android:textSize="50dp" />
+                android:textSize="50dp"
+                android:text="活动内容" />
         </LinearLayout>
     </LinearLayout>
 
@@ -186,16 +187,16 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/item_img"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_above="@+id/textView5"
+                    android:layout_above="@+id/description"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:src="@drawable/beer" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
